<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_b6"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            android:text="帮助" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/linearLayout1">
        
        <ScrollView
   		    android:id="@+id/scrollView1"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
    	android:orientation="vertical">
        

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:text="@string/help_1" />

        <TextView
            android:id="@+id/textview2"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_2"
            android:textColor="@android:color/black" />
        
        
        <TextView
            android:id="@+id/textview3"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="@string/help_3" />

        <TextView
            android:id="@+id/textview4"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="@string/help_4" />
        <TextView
            android:id="@+id/textview5"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="@string/help_5" />
        <TextView
            android:id="@+id/textview6"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="@string/help_6" />
        <TextView
            android:id="@+id/textview7"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="@string/help_7" />
        
        </LinearLayout>
        
    </ScrollView>

        

    </RelativeLayout>

</RelativeLayout>