<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_b6"
    android:orientation="vertical" >

    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            android:text="趣味连萌功能介绍" />
    </LinearLayout>
    
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/linearLayout1"
         >
    <ScrollView
   		    android:id="@+id/scrollView1"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/linearLayout1"
    	android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="5dp">
        

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="1.经典模式" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_introduce_1"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="2.争分夺秒"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_introduce_2"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="3.无尽模式"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_introduce_3"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="4.重新排列"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:text="@string/about_introduce_4" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="5.炸弹功能" />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:text="@string/about_introduce_5" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="6.暂停功能" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:text="@string/about_introduce_6" />
        
    </LinearLayout>
    </ScrollView>
    </RelativeLayout>

</RelativeLayout>