<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginTop="10dip">
<!--刷新道具  -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:clickable="true"
        android:background="@drawable/home_select_list_style">
        
        <ImageView 
            android:id="@+id/home_img_looks"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/refresh"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/home_img_looks"
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_looks_tv"
                android:textSize="18dip"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_looks_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip"/>
        </LinearLayout>
         <ImageButton 
    	     android:id="@+id/buy_sx_btn"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_alignParentRight="true"
    	     android:src="@drawable/score"
    	     />
         <TextView
    	        android:id="@+id/buy_sx_tv2"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_centerVertical="true"
    	     android:layout_toLeftOf="@id/buy_sx_btn"
             android:textSize="18dip"
             android:textColor="@android:color/secondary_text_light"    	         	     
    	      android:text=" x1 "/>
    	      <TextView
    	        android:id="@+id/buy_sx_tv1"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_toLeftOf="@id/buy_sx_tv2"
    	     android:layout_centerVertical="true"
    	     android:background="@drawable/diamond"
    	        />   
    </RelativeLayout>
        <!-- 提示道具 -->
    
            <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:clickable="true"
        android:background="@drawable/home_select_list_style">
        <ImageView 
            android:id="@+id/home_img_shopping"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/tishi"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/home_img_shopping"
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_shopping_tv"
                android:textSize="18dip"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_shopping_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip"/>
        </LinearLayout>
        <ImageButton 
    	     android:id="@+id/buy_ts_btn"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_alignParentRight="true"
    	     android:src="@drawable/score"
    	     />
         <TextView
    	        android:id="@+id/buy_ts_tv2"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_centerVertical="true"
    	     android:layout_toLeftOf="@id/buy_ts_btn"
             android:textSize="18dip"
             android:textColor="@android:color/secondary_text_light"    	         	     
    	      android:text=" x1 "/>
    	      <TextView
    	        android:id="@+id/buy_ts_tv1"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_toLeftOf="@id/buy_ts_tv2"
    	     android:layout_centerVertical="true"
    	     android:background="@drawable/diamond"
    	        />   
     </RelativeLayout>
        <!-- 延时道具 -->
            
                    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:clickable="true"
        android:background="@drawable/home_select_list_style">
        <ImageView 
            android:id="@+id/home_img_show"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/mall_time"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/home_img_show"
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_show_tv"
                android:textSize="18dip"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_show_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip"/>
        </LinearLayout>
                 <ImageButton 
    	     android:id="@+id/buy_ys_btn"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_alignParentRight="true"
    	     android:src="@drawable/score"
    	     />
         <TextView
    	        android:id="@+id/buy_ys_tv2"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_centerVertical="true"
    	     android:layout_toLeftOf="@id/buy_ys_btn"
             android:textSize="18dip"
             android:textColor="@android:color/secondary_text_light"    	         	     
    	      android:text=" x1 "/>
    	      <TextView
    	        android:id="@+id/buy_ys_tv1"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_toLeftOf="@id/buy_ys_tv2"
    	     android:layout_centerVertical="true"
    	     android:background="@drawable/diamond"
    	        />   
        
    </RelativeLayout>
    <!-- 炸弹道具 -->
       <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:clickable="true"
        android:background="@drawable/home_select_list_style">
        <ImageView 
            android:id="@+id/home_img_search"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/mall_zha"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/home_img_search"
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_search_tv"
                android:textSize="18dip"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_search_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip"/>
        </LinearLayout>
                 <ImageButton 
    	     android:id="@+id/buy_zd_btn"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_alignParentRight="true"
    	     android:src="@drawable/score"
    	     />
         <TextView
    	        android:id="@+id/buy_zd_tv2"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_centerVertical="true"
    	     android:layout_toLeftOf="@id/buy_zd_btn"
             android:textSize="18dip"
             android:textColor="@android:color/secondary_text_light"    	         	     
    	      android:text=" x1 "/>
    	      <TextView
    	        android:id="@+id/buy_zd_tv1"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_toLeftOf="@id/buy_zd_tv2"
    	     android:layout_centerVertical="true"
    	     android:background="@drawable/diamond"
    	        />   
        
        
    </RelativeLayout>
    <!-- 更多。。。 -->
      <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:clickable="true"
        android:background="@drawable/home_select_list_style">
        <ImageView 
            android:id="@+id/home_img_browse"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/score"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/home_img_browse"
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_browse_tv"
                android:textSize="18dip"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_browse_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip"/>
        </LinearLayout>
                 
        <ImageView 
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dip"
            android:layout_centerVertical="true"
            android:src="@drawable/home_index_arrow"/>
    </RelativeLayout>
</LinearLayout>